# drafts

./: README.md
fft_test/: bin_fft  build.sh  fft_data.txt  fft_data_out.txt  main.c
gp_test/: bin_gen  build.sh  gen_sig.c  info.txt
gp_test/api/test/: anim  example  sinepng  sinepng.c
http_test/: Makefile  file_proc.c  file_proc.h  index.html  misc.c  misc.h  plotly_test.html  test.html  test_out.txt  tiny  tiny.c
rpc_test/test0/: bin_hello  client.c  hello_svc.c  server.c
rpc_test/test1/: bin_client  bin_server  build.sh  client.c  hello.h  hello.x  hello_svc.c  server.c
rpc_test/test2/: bin_client  bin_server  build.sh  client.c  gen_data.sh  server.c  test2.h  test2.x  test2_clnt.c  test2_svc.c
rpc_test/test3/: bin_client  bin_server  build.sh  client.c  gen_data.sh  server.c  test3.h  test3.x  test3_clnt.c  test3_svc.c  test3_xdr.c
work_dir/: test.py
work_dir/c_py_test/test0/: bin_call_func  build.sh  call_func.cpp  py_test_module.py
work_dir/c_py_test/test1/: bin_call_func  call_func.cpp  client.py  server.py
work_dir/c_test/: bin_sig_test  bin_sig_test_2  build.sh  clib1.c  makefile  sig_test.c  sig_test_2.c
work_dir/c_test/test0/: bin_client  bin_server  build.sh  (+7 more)
work_dir/cmake_test/src/: CMakeLists.txt  main.c  misc.h
work_dir/cpp_serialization/: Makefile  c_serializable.cpp  c_serializable.hpp  c_string_wrap.cpp  c_string_wrap.hpp  c_test_class.cpp  c_test_class.hpp  cpp_serialization  cpp_serialization.pro  main.cpp
work_dir/cpp_tests/: c_test_class.cpp  c_test_class.h  c_test_class_2.cpp  c_test_class_2.h  cpp_tests.pro  main.cpp
(+49 files in other folders)
